added email notnull message

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -9,6 +9,7 @@ message.regSucc=You registered successfully. We will send you a confirmation mes
 message.regError=An account for that username/email already exists. Please enter a different username.
 message.lastName=Last name is required
 message.firstName=First name required
+message.email=Email is required
 message.badEmail=Invalid email address
 message.email.config.error=Error in java mail configuration
 token.message=Your token is:
@@ -42,6 +43,7 @@ label.badUser.title=Invalid Link
 ValidEmail.user.email=Invalid email address!
 UniqueUsername.user.username=An account with that username/email already exists
 NotNull.user.firstName=First name required
+NotNull.user.email=Email is required
 NotEmpty.user.firstName=First name required
 NotNull.user.lastName=Last name required
 NotEmpty.user.lastName=Last name required
