create and update todolist

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -79,3 +79,5 @@ error.wordLowercase=Use lower case characters
 error.wordUppercase=Use upper case characters
 error.wordOneNumber=Use numbers
 error.wordOneSpecialChar=Use special characters
+NotNull.todolist.title=Title is required
+NotNull.todolist.description=Description is required
